--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,6 +16,13 @@
                         <h4 class="pull-right"> $9.00/night </h4>
                         <h4><a><%= campground.name %></a></h4>
                         <p> <%= campground.description %> </p>
+                        <p>Submited By <%= campground.author.username %></p>
+                        <% if(currentUser && campground.author.id.equals(currentUser._id)){%>
+                        <a class="btn btn-warning btn-xs" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
+                        <form id="delete-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger btn-xs"> Delete </button>
+                        </form>
+                        <% } %>
                     </div>
             </div>
             <div class="well">
@@ -26,11 +33,17 @@
                 <% campground.comments.forEach(function(comments){ %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong> <%= comments.author %> </strong>
+                            <strong> <%= comments.author.username %> </strong>
                             <span class="pull-right"> 10 days ago </span>
                             <p> 
                                 <%= comments.text  %> 
                             </p> 
+                            <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id%>/comments/<%=comments._id%>/edit"> 
+                                Edit 
+                            </a>
+                            <form id="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comments._id%>?_method=DELETE" method="POST">
+                                <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                            </form>
                         </div>
                     </div>
                 <% }) %>
