--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,7 +13,7 @@
             <div  class="thumbnail">
                     <img class="img-responsive" src="<%= campground.image %>" >
                     <div class="caption-full">
-                        <h4 class="pull-right"> $9.00/night </h4>
+                        <h4 class="pull-right"> <%= campground.price %>$/night</h4>
                         <h4><a><%= campground.name %></a></h4>
                         <p> <%= campground.description %> </p>
                         <p>Submited By <%= campground.author.username %></p>
@@ -38,12 +38,14 @@
                             <p> 
                                 <%= comments.text  %> 
                             </p> 
+                            <% if(currentUser && comments.author.id.equals(currentUser._id)){%>
                             <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id%>/comments/<%=comments._id%>/edit"> 
                                 Edit 
                             </a>
                             <form id="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comments._id%>?_method=DELETE" method="POST">
                                 <input type="submit" class="btn btn-xs btn-danger" value="Delete">
                             </form>
+                            <%}%>
                         </div>
                     </div>
                 <% }) %>
