--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,3 +26,18 @@
              </nav>
     </body>
     <body>
+<div class="container">
+        <%if(error && error.length > 0){%>
+        <div class="alert alert-danger" role="alert">
+                <%= error %>
+        </div>
+        <%}%>
+</div>
+                                   
+<div class="container">
+        <%if(success && success.length > 0){%>
+        <div class="alert alert-success" role="alert">
+                <%= success %>
+        </div>
+        <%}%>
+</div>
